@@ -1,0 +1,5 @@
+- **Vérification du calcul de la table d'amortissement :**
+
+  Un avertissement apparaît si le montant de la dernière échéance est très différent du montant du palier correspondant, à savoir plus n de centimes de différence, n étant le nombre d'échéances du prêt.
+
+  .. image :: images/warning_last_payment.png
