@@ -41,7 +41,15 @@
         <field name="deferal"/>
         <label name="deferal_duration"/>
         <field name="deferal_duration"/>
-        <field name="increments" colspan="4" mode="tree"/>
+        <newline/>
+        <group id="warning" string="" colspan="2">
+            <image name="tryton-dialog-warning" xexpand="0" xfill="0"/>
+            <label string="Please check the last payment" id="warning_payment" yalign="0.0" xalign="0.0" xexpand="1" colspan="3"/>
+            <newline/>
+        </group>
+        <field name="increments" colspan="4" mode="tree" pre_validate="1"/>
         <field name="insured_persons" colspan="4" view_ids="party_cog.person_view_tree,party.party_view_form"/>
+        <newline/>
+        <field name="display_warning" invisible="1"/>
     </xpath>
 </data>
